@@ -1,10 +1,11 @@
 import java.util.*;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class Main {
     public static void main(String[] args) {
-        List<String> names = Arrays.asList("yamada", "tanaka", "yasuda", "suzuki", "iida");
-        List<String> rusult = names.stream().sorted().toList();
-        System.out.println(rusult);
+        List<String> namelist = List.of("yamada", "tanaka", "yasuda", "suzuki", "iida");
+
+        namelist.forEach(System.out::println);
     }
 }
